--- a/to-doapp/src/app/app.component.html
+++ b/to-doapp/src/app/app.component.html
@@ -1,1 +1,8 @@
-{{title}}
+<app-header></app-header>
+
+<div class="container">
+  <!-- <button class="btn btn-primary">
+    Hello
+  </button> -->
+
+</div>
