--- a/to-doapp/src/app/app.component.html
+++ b/to-doapp/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-header></app-header>
 
 <div class="container">
-  <!-- <button class="btn btn-primary">
-    Hello
-  </button> -->
+  <app-todos></app-todos>
 
 </div>
