--- a/to-doapp/src/app/app.component.html
+++ b/to-doapp/src/app/app.component.html
@@ -1,6 +1,16 @@
-<app-header></app-header>
+<ng-container>
+    <app-header></app-header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7">
+<img src ="../assets/todo.png"  class="img-fluid" alt ="">
+            </div>
+            <div class="col-lg-5 mt-5">
+                <app-todo-form></app-todo-form>
+                <app-todos></app-todos>
+            </div>
+        </div>
+    </div>
 
-<div class="container">
-  <app-todos></app-todos>
 
-</div>
+</ng-container>
