--- a/to-doapp/src/app/components/todo-form/todo-form.component.html
+++ b/to-doapp/src/app/components/todo-form/todo-form.component.html
@@ -1,1 +1,9 @@
-<p>todo-form works!</p>
+|<div class="input-group mb-3 w-100">
+
+<input type ="text" name="todo" placeholder="Enter a todo" [(ngModel)] = "todoTitle" class="form-control"/>
+
+|<div class="input-group-append">
+    <button (click) = "handleAdd() " class="btn btn-primary">Add Todo</button>
+</div> 
+
+</div>
