pushing the html chznges

--- a/to-doapp/src/app/app.component.html
+++ b/to-doapp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ng-container>
     <app-header></app-header>
     <div class="container">
+        <h1>without add checking</h1>
         <div class="row">
             <div class="col-lg-7">
 <img src ="../assets/todo.png"  class="img-fluid" alt ="">
