--- a/to-doapp/src/app/app.component.html
+++ b/to-doapp/src/app/app.component.html
@@ -5,6 +5,7 @@
         <div class="row">
             <div class="col-lg-7">
 <img src ="../assets/todo.png"  class="img-fluid" alt ="">
+              <h1>checking...</h1>
             </div>
             <div class="col-lg-5 mt-5">
                 <app-todo-form></app-todo-form>
