--- a/to-doapp/src/app/app.component.html
+++ b/to-doapp/src/app/app.component.html
@@ -6,6 +6,7 @@
             <div class="col-lg-7">
 <img src ="../assets/todo.png"  class="img-fluid" alt ="">
               <h1>checking...</h1>
+              <h2>Creating dev</h2>
             </div>
             <div class="col-lg-5 mt-5">
                 <app-todo-form></app-todo-form>
